--- a/index.css
+++ b/index.css
@@ -1,35 +1,91 @@
 body{
-	background-color:lightgrey;
+	background-color:rgb(0, 102, 102);
 }
 
 h3{
 	color: white ;
-	background-color: rgba(255, 99, 71, 0.5);
+	background-color: rgb(102, 51, 0);
 
 }
 table, th, td {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 table {
-  width: 100%;
+	width: 100%;
   
 }
 td{
 	vertical-align: middle;
 }
-.first{
-	background-color: rgba(255, 99, 71, 0.5);
-	color: black;
-	text-align:center;
-	border:5px outset rgb(250, 240, 230);
+#name{
+	text-align: center;
+	border: 1px solid black;
+	background-color: rgb(102, 51, 0);
+	color: white;
 }
 header{
-	 background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
+	 background-color:rgb(0, 102, 102);
+	padding: 30px;
+	text-align: center;
+	font-size: 35px;
+	color: white;
 }
 nav{
 	text-align: center;
+}
+aside{
+	float: right;
+	padding: 20px;
+	width: 70%;
+	background-color: #f1f1f1;
+	height: 1000px;
+}
+#course{
+	position: relative;
+	
+
+}
+section{
+	float: left;
+	padding: 20px;
+	width: 22%;
+	background-color: #f1f1f1;
+	height: 300px;
+	}
+#mainimg{
+	display: block;
+ 	margin-left: auto;
+ 	margin-right: auto;;
+	width:150px;
+	height:150px;
+	position: relative ;
+}
+article{
+	float: left;
+	padding: 20px;
+  	width: 22%;
+  	background-color: #f1f1f1;
+  	height: 650px;
+  }
+#phone{
+	width:15px;
+	height:15px;
+	position: relative;
+	
+  }
+#smimg{
+	width:50px;
+	height:35px;
+	position: relative;
+	padding: 15px 25px;
+ 	text-align: center;
+
+
+
+}
+footer{
+	background-color: #666;
+	padding: 30px;
+	font-size: 35px;
+	color: white;
 }
